==> AnZ2G/GD32F450-Library-Demo/Demo/Libraries/Utilities/Third_Party/GD32F450_Main_Board_Camera_V1.0/SEEKFREE_MT9V03X.c <==
#include "zf_camera.h"
#include "wh_uart.h"
#include "common.h"
#include "wh_flash.h"
#include "oled.h"
#include "SEEKFREE_MT9V03X.h"

void set_config(uint32_t uartn, int16_t buff[CONFIG_FINISH-1][2])
{
	uint16_t temp, i;
	uint8_t  send_buffer[4];

	uart_receive_flag = 0;

	//设置参数  具体请参看问题锦集手册
	//开始配置摄像头并重新初始化
	for(i=0; i<CONFIG_FINISH; i++)
	{
		send_buffer[0] = 0xA5;
		send_buffer[1] = buff[i][0];
		temp = buff[i][1];
		send_buffer[2] = temp>>8;
		send_buffer[3] = (uint8_t)temp;

		uart_putbuff(uartn,send_buffer,4);
		delay_1ms(2);
	}
	//等待摄像头初始化成功
	while(!uart_receive_flag);
	uart_receive_flag = 0;
	while((0xff != receive[1]) || (0xff != receive[2]));
	//以上部分对摄像头配置的数据全部都会保存在摄像头上51单片机的eeprom中
	//利用set_exposure_time函数单独配置的曝光数据不存储在eeprom中
}

void mt9v03x_exti_init(void)
{
	    /* enable the Tamper key GPIO clock */
    rcu_periph_clock_enable(RCU_GPIOB);
    rcu_periph_clock_enable(RCU_SYSCFG);

    gpio_mode_set(GPIOB, GPIO_MODE_INPUT, GPIO_PUPD_PULLDOWN, GPIO_PIN_9|GPIO_PIN_8);
    
//    /* enable and set key EXTI interrupt priority */
    nvic_irq_enable(EXTI5_9_IRQn, 3U, 0U);
//    /* connect key EXTI line to key GPIO pin */
    syscfg_exti_line_config(EXTI_SOURCE_GPIOB, EXTI_SOURCE_PIN9);
//    /* configure key EXTI line */
    exti_init(EXTI_9, EXTI_INTERRUPT, EXTI_TRIG_FALLING);
	  //exti_interrupt_enable(EXTI_9);
	 
    exti_interrupt_flag_clear(EXTI_9);
	
}

void mt9v03x_dma_init(void)
{
    gpio_mode_set(GPIOG, GPIO_MODE_INPUT, GPIO_PUPD_NONE, GPIO_PIN_8|GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15);
	//DMA1总线初始化
//	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);
	    
	//DMA摄像头初始化
	camera_dma_init((uint32_t)(volatile uint32_t *)(uint32_t)((GPIOG) + 0x10U +1), (uint32_t)camera_buffer_addr, MT9V03X_H*MT9V03X_W);
	//中断配置
}

void mt9v03x_init(void)
{
//	camera_type = CAMERA_GRAYSCALE;//设置连接摄像头类型
	camera_buffer_addr = mt9v03x_image[0];

	    /* USART interrupt configuration */
    nvic_irq_enable(USART0_IRQn, 0, 0);
    /* 配置TXD和RXD引脚以及串口 */
    uart_tx_init(GPIOA, GPIO_PIN_15, RCU_GPIOA);
    uart_rx_init(GPIOB, GPIO_PIN_3, RCU_GPIOB);
    uart_init(RCU_USART0, USART0, 9600U);  
    usart_interrupt_enable(USART0, USART_INT_RBNE);
	delay_1ms(200);

	uart_receive_flag = 0;
	//等待摄像头上电初始化成功 方式有两种：延时或者通过获取配置的方式 二选一
	//systick_delay_ms(1000);//延时方式
	get_config(MT9V03X_COF_UART, GET_CFG);//获取配置的方式

	uart_receive_flag = 0;
	set_config(MT9V03X_COF_UART, MT9V03X_CFG);

	uart_receive_flag = 0;
	//获取配置便于查看配置是否正确
	get_config(MT9V03X_COF_UART, GET_CFG);
    printf("3\n");
  
    //初始化dcmi接口
    dcmi_init();
    //初始化dcmi的dma通道
    dcmi_dma_init((uint32_t)camera_buffer_addr,MT9V03X_H*MT9V03X_W/4);//DCMI DMA配置

}
