==> yangyuge1/mm32f3277/平衡信标/平衡车V17.0（39侧翼绕灯全程300速）/MM32F3277/Libraries/seekfree_peripheral/SEEKFREE_MT9V03X.c <==
#include "zf_systick.h"
#include "hal_rcc.h"
#include "hal_gpio.h"
#include "hal_uart.h"
#include "hal_dma.h"
#include "hal_exti.h"
#include "hal_conf.h"
#include "SEEKFREE_MT9V03X.h"

void set_config(int16 buff[CONFIG_FINISH-1][2])
{
	uint16 temp, i;
	uint8  send_buffer[4];

	uart_receive_flag = 0;

	//设置参数  具体请参看问题锦集手册
	//开始配置摄像头并重新初始化
	for(i=0; i<CONFIG_FINISH; i++)
	{
		send_buffer[0] = 0xA5;
		send_buffer[1] = buff[i][0];
		temp = buff[i][1];
		send_buffer[2] = temp>>8;
		send_buffer[3] = (uint8)temp;

		uart8_putbuff(send_buffer,4);
		systick_delay_ms(2);
	}
	//等待摄像头初始化成功
	while(!uart_receive_flag);
	uart_receive_flag = 0;
	while((0xff != receive[1]) || (0xff != receive[2]));
	//以上部分对摄像头配置的数据全部都会保存在摄像头上51单片机的eeprom中
	//利用set_exposure_time函数单独配置的曝光数据不存储在eeprom中
}

void mt9v03x_init(void)
{
//	camera_type = CAMERA_GRAYSCALE;//设置连接摄像头类型
	camera_buffer_addr = mt9v03x_image[0];

	// 初始换串口 配置摄像头
	mt9v03x_uart_init();
	
	mt9v03x_uart_rx_irq(ENABLE);
	
	systick_delay_ms(200);

	uart_receive_flag = 0;
	//等待摄像头上电初始化成功 方式有两种：延时或者通过获取配置的方式 二选一
	//systick_delay_ms(1000);//延时方式
	get_config( GET_CFG);//获取配置的方式
	
	uart_receive_flag = 0;
	set_config( MT9V03X_CFG);

	uart_receive_flag = 0;
	//获取配置便于查看配置是否正确
	get_config( GET_CFG);

	//DMA初始化
	mt9v03x_dma_init();
	//GPIO触发定时器初始化,PLCK引脚初始化
	mt9v03x_tim1_etr_init();
	//VSYNC初始化
	mt9v03x_exti_init();
}

void mt9v03x_dma_init(void) 
{
	GPIO_InitTypeDef GPIO_InitStruct;
	DMA_InitTypeDef DMA_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;
	
	RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOF, ENABLE);

	GPIO_StructInit(&GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = GPIO_Pin_0|GPIO_Pin_1|GPIO_Pin_2|GPIO_Pin_3|GPIO_Pin_4|GPIO_Pin_5|GPIO_Pin_6|GPIO_Pin_7;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_FLOATING;
	GPIO_Init(GPIOF, &GPIO_InitStruct);
	

	RCC_AHBPeriphClockCmd(RCC_AHBENR_DMA1, ENABLE);
	DMA_DeInit(DMA1_Channel4);

	//MDA配置初始化
	DMA_InitStructure.DMA_PeripheralBaseAddr = (u32)MT9V03X_DATA_ADD;										// 源地址
	DMA_InitStructure.DMA_MemoryBaseAddr = (u32)camera_buffer_addr;											// 目标地址
	DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralSRC;											// 外设作为源
	DMA_InitStructure.DMA_BufferSize = MT9V03X_H*MT9V03X_W;													// 传输多少个数据
	DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;							// 外设地址不增加
	DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;										// 内存地址依次+1
	DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;						// 外设每次传输一个字节
	DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;								// 内存每次传输一个字节
	DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;												// 非循环模式
	DMA_InitStructure.DMA_Priority = DMA_Priority_VeryHigh;										// 优先级最高
	DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;												// 非内存到内存模式
	DMA_InitStructure.DMA_Auto_reload = DMA_Auto_Reload_Enable;
	DMA_Init(DMA1_Channel4, &DMA_InitStructure);

	DMA_ITConfig(DMA1_Channel4, DMA_IT_TC, ENABLE);													// 配置DMA传输完成中断
	DMA_Cmd(DMA1_Channel4, ENABLE);																	// 开启DMA1
	DMA_Cmd(DMA1_Channel4, DISABLE);																	// 开启DMA1

	NVIC_InitStructure.NVIC_IRQChannel = DMA1_Channel4_IRQn;                                  //中断号设置
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority= 0x00;	//抢占优先级值越小，优先级越高
	NVIC_InitStructure.NVIC_IRQChannelSubPriority= 0x01;				//抢占优先级值越小，优先级越高
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;								//使能
	NVIC_Init(&NVIC_InitStructure);
}

void mt9v03x_exti_init(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;
	RCC_AHBPeriphClockCmd(RCC_AHBENR_GPIOE, ENABLE);
	
//	GPIO_PinAFConfig(GPIOE, GPIO_PinSource8, GPIO_AF_1);
	GPIO_StructInit(&GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = GPIO_Pin_8;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_FLOATING;
	GPIO_Init(GPIOE, &GPIO_InitStruct);//PE8是摄像头的场中断
	
	NVIC_InitTypeDef NVIC_InitStructure;														// 中断配置结构体
	EXTI_InitTypeDef EXTI_InitStructure;														// EXTI 配置结构体

	RCC_APB2PeriphClockCmd(RCC_APB2ENR_EXTI, ENABLE);
//	RCC->APB2ENR |= RCC_APB2ENR_EXTI;
	
	SYSCFG_EXTILineConfig(((0x48&0xf0) >> 4), (0x48&0x0f));										// 先启用对应的 GPIO 组别的 EXTI 输入使能
	EXTI_StructInit(&EXTI_InitStructure);														// 获取默认的 EXTI 配置
	EXTI_InitStructure.EXTI_Line = 0x00000001 << (0x48&0x0f);									// 设置对应的 LINE
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;											// 设置中断模式
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;													// 设置触发方式
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;													// 使能
	EXTI_Init(&EXTI_InitStructure);																// 初始化 EXTI
	
	NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x00;					// 设置组优先级
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x00;								// 设置子优先级
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;												// 使能中断
	NVIC_Init(&NVIC_InitStructure);																// 初始化中断配置

}
